--- a/src/app/modules/participantes/visualizar-programas--capacitacion/pages/visualizar-programas-capacitacion/visualizar-programas-capacitacion.component.html
+++ b/src/app/modules/participantes/visualizar-programas--capacitacion/pages/visualizar-programas-capacitacion/visualizar-programas-capacitacion.component.html
@@ -1,1 +1,53 @@
-<p>visualizar-programas-capacitacion works!</p>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<br>
+<br>
+<div class="container" *ngIf="showContainer1">
+    <div class="row">
+        <div class="col-md-4 col-xl-3" *ngFor="let programa of programasList">
+            <div class="card bg-c-yellow order-card" (click)="mostrarCursos(programa)" (click)="showContainer2 = true; showContainer1 = false;  ">
+                <div class="card-block">
+                    <h6 class="m-b-20">{{programa.pcaProceso}}</h6>
+                    <h2 class="text-right"><i
+                            class="fa fa-graduation-cap f-left"></i><span>{{programa.pcaNombre}}</span></h2>
+                    <div style="margin-bottom: 10px;">
+                        <h3 class="val"><span class="f-right">{{programa.pcaFechainicio | date:
+                                'dd/MM/yyyy'}}</span>Inicia</h3>
+                        <h3 class="val"><span class="f-right">{{programa.pcaFechafin | date:
+                                'dd/MM/yyyy'}}</span>Termina</h3>
+                    </div>
+                    <div style="margin-bottom: 10px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container2" *ngIf="showContainer2">
+    <button (click)="showContainer1 = true; showContainer2 = false;"  >Volver a Programas</button>
+    <br>
+    <div class="row">
+        <div class="col-md-4 col-xl-3" *ngFor="let curso of cursosList">
+            <div class="card bg-c-blue order-card" (click)="mostrarDatosCurso(curso)" (click)="showContainer2 = false; showContainer3 = true;" >
+                <div class="card-block">
+                    <h6 class="m-b-20">Codigo: {{curso.curCodigo}}</h6>
+                    <h2 class="text-right"><i
+                            class="fa fa-graduation-cap f-left"></i><span>{{curso.curNombre}}</span></h2>
+                    <div style="margin-bottom: 10px;">
+                        <h3 class="val"><span class="f-right">{{curso.curFechainicio | date:
+                                'dd/MM/yyyy'}}</span>Inicia</h3>
+                        <h3 class="val"><span class="f-right">{{curso.curFechafin | date:
+                                'dd/MM/yyyy'}}</span>Termina</h3>
+                    </div>
+                    <div style="margin-bottom: 10px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container3" *ngIf="showContainer3">
+    <button (click)="showContainer2 = true; showContainer3 = false" >Volver a Cursos</button>
+    <br>
+    <h2>Holaa 3</h2>
+
+</div>
