--- a/src/app/modules/docente-capacitador/register-area/pages/register-area/register-area.component.html
+++ b/src/app/modules/docente-capacitador/register-area/pages/register-area/register-area.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container" style="background-color: #ffffff;">
   <div class="mt-4">
-    <h3>{{ isNew ? 'Nueva Área' : 'Editar Área' }}</h3>
+    <h3 style="text-align: center;">{{ isNew ? 'Nueva Área' : 'Editar Área' }}</h3>
     <form #areaForm="ngForm" (ngSubmit)="submitForm()">
       <div class="row">
         <div class="col-md-6">
