--- a/src/app/modules/docente-capacitador/register-mecanismo-eva/pages/register-mecanismo-eva/register-mecanismo-eva.component.html
+++ b/src/app/modules/docente-capacitador/register-mecanismo-eva/pages/register-mecanismo-eva/register-mecanismo-eva.component.html
@@ -1,13 +1,13 @@
-<div class="container">
+<div class="container" style="background-color: #ffffff;">
     <div class="mt-4">
-      <h3>{{ isNew ? 'Nuevo Mecanismo de evaluación' : 'Editar Mecanismo de evaluación' }}</h3>
+      <h3 style="text-align: center;">{{ isNew ? 'Nuevo Mecanismo de evaluación' : 'Editar Mecanismo de evaluación' }}</h3>
       <form #mecanismoForm="ngForm" (ngSubmit)="submitForm()">
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
-              <label for="diseno">Diseño curricular:</label>
-              <select class="form-control" id="diseno" [(ngModel)]="mecanismoSeleccionado.mevDiseno.dcuId" name="diseno" (change)="mostrarDatosSeleccionados()">
-                <option *ngFor="let diseno of disenos" [value]="diseno.dcuId" [selected]="diseno.dcuId === mecanismoSeleccionado.mevDiseno.dcuId">{{ diseno.dcuTemastransversales }}</option>
+              <label for="diseno">Seleccione el diseño curricular al que pertenece:</label>
+              <select class="form-control" id="diseno" [(ngModel)]="mecanismoSeleccionado.mevDiseno.dcuId" name="diseno">
+                <option *ngFor="let diseno of disenos" [value]="diseno.dcuId" [selected]="diseno.dcuId === mecanismoSeleccionado.mevDiseno.dcuId">{{ diseno.dcuIdentificador }}</option>
               </select>
             </div>
             <div class="form-group">
@@ -43,7 +43,7 @@
           <tr *ngIf="mecanismo.mevDescripcion.toLowerCase().includes(filtro.toLowerCase())">
           <td>{{ mecanismo.mevId }}</td>
           <td>{{ mecanismo.mevDescripcion }}</td>
-          <td>{{ mecanismo.mevDiseno ? mecanismo.mevDiseno.dcuTemastransversales : '' }}</td>
+          <td>{{ mecanismo.mevDiseno ? mecanismo.mevDiseno.dcuIdentificador : '' }}</td>
           <td>
             <button class="btn btn-primary" (click)="editarMecanismo(mecanismo)">Editar</button>
             <button class="btn btn-danger" (click)="eliminarMecanismo(mecanismo.mevId)">Eliminar</button>
