--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -341,10 +341,10 @@
       </li><!-- End Charts Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#esp-nav" data-bs-toggle="collapse" href="#">
+        <a class="nav-link collapsed" data-bs-target="#ent-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-gem"></i><span>Entorno de Aprendizaje</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="esp-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <ul id="ent-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
             <a (click)=" goToregisentorno($event)">
               <i class="bi bi-circle"></i><span>Registrar Entorno de Aprendizaje</span>
@@ -389,6 +389,25 @@
               <i class="bi bi-circle"></i><span>Detalle del Mecanismo</span>
             </a>
           </li>
+         
+        </ul>
+      </li><!-- End Charts Nav -->
+      <li class="nav-item">
+        <a class="nav-link collapsed" data-bs-target="#cap-nav" data-bs-toggle="collapse" href="#">
+          <i class="bi bi-gem"></i><span>Curso Capacitación</span><i class="bi bi-chevron-down ms-auto"></i>
+        </a>
+        <ul id="cap-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+          <li>
+            <a (click)=" goToregiscursoCap($event)">
+              <i class="bi bi-circle"></i><span>Registrar Capacitación</span>
+            </a>
+          </li>
+          <!--<li>
+            <a (click)=" goToregisespecialidad($event)">
+              <i class="bi bi-circle"></i><span>Registrar Especialidad</span>
+            </a>
+          </li>-->
+          
          
         </ul>
       </li><!-- End Charts Nav -->
