Cambios en perfiles y cursos
Cambios en perfiles y cursos

--- a/src/app/modules/participantes/apli-cursos/pages/apli-cursos/apli-cursos.component.html
+++ b/src/app/modules/participantes/apli-cursos/pages/apli-cursos/apli-cursos.component.html
@@ -1,1 +1,42 @@
-<p>apli-cursos works!</p>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+
+<div class="container2">
+    <!-- Breadcrumb -->
+    <!-- <nav aria-label="breadcrumb" class="main-breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false;">Programas</a></li>
+            <li class="breadcrumb-item"><a>Cursos</a></li>
+        </ol>
+    </nav> -->
+    <!-- /Breadcrumb -->
+<br>
+    <div class="row" *ngFor="let curso of fichasList">
+        <div class="col-md-4 col-xl-3" *ngIf="curso.finAprobacion!=1">
+            <div class="card bg-c-blue order-card" >
+                <div class="card-block">
+                    <div *ngIf="curso.finAprobacion==0">
+                        <h6 class="m-b-20">Codigo: {{curso.finCurso.curCodigo}}
+                            <span class="f-right" style="color: rgb(240, 255, 30);">Pendiente</span>
+                        </h6>
+                    </div>
+                    <div *ngIf="curso.finAprobacion==2">
+                        <h6 class="m-b-20" >Codigo: {{curso.finCurso.curCodigo}}
+                            <span class="f-right" style="color: red;">Rechazado</span>
+                        </h6>
+                    </div>
+                    <h2 class="text-right"><i
+                            class="fa fa-graduation-cap f-left"></i><span>{{curso.finCurso.curNombre}}</span>
+                    </h2>
+                    <div style="margin-bottom: 10px;">
+                        <h3 class="val"><span class="f-right">{{curso.finCurso.curFechainicio | date:
+                                'dd/MM/yyyy'}}</span>Inicia</h3>
+                        <h3 class="val"><span class="f-right">{{curso.finCurso.curFechafin | date:
+                                'dd/MM/yyyy'}}</span>Termina</h3>
+                    </div>
+                    <div style="margin-bottom: 10px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
