--- a/src/app/modules/docente-capacitador/register-ficha-evaluacion/pages/register-ficha-evaluacion/register-ficha-evaluacion.component.html
+++ b/src/app/modules/docente-capacitador/register-ficha-evaluacion/pages/register-ficha-evaluacion/register-ficha-evaluacion.component.html
@@ -71,7 +71,7 @@
                 <button
                   type="button"
                   class="btn btn-danger"
-                  (click)="deleteCategory(i)"
+                  (click)="deleteCategory(i, category.name)"
                 >
                   Quitar
                 </button>
